Fixed footer on mobile

--- a/css/lp.css
+++ b/css/lp.css
@@ -170,6 +170,7 @@ footer{
 
   .landing-about{
     width: 95%;
+    margin-bottom: 2em;
   }
 
   .landing-about p{
